# media-center-web

./: .env  .gitignore  Cargo.toml  README.md  commit.json  config.xml  debug.sh  do  do.sh
.devcontainer/: Dockerfile  devcontainer.json
media-center-web-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
media-center-web-ui/src/: App.tsx  app.css  main.tsx
media-center-web-ui/src/behaviours/: clicked-outside.ts  multi.ts  resize.ts  select-all.ts
media-center-web-ui/src/components/badge/: badge.tsx
media-center-web-ui/src/components/button/: button.tsx  link-button.tsx  roll-button.tsx
media-center-web-ui/src/components/dialog/: dialog.tsx
media-center-web-ui/src/components/divider/: divider.tsx
media-center-web-ui/src/components/download-item/: download-item.module.css  download-item.tsx
media-center-web-ui/src/components/link/: Link.tsx
media-center-web-ui/src/components/links-panel/: links-panel.tsx
media-center-web-ui/src/contexts/: socket-context.ts  socket-context.tsx
media-center-web-ui/src/models/: search.model.ts  session.model.ts
media-center-web-ui/src/providers/: socket.provider.tsx  torrents-stream-info-provider.tsx
media-center-web-ui/src/services/: api-service.tsx  fetch-service.ts
media-center-web-ui/src/utils/: data.utils.ts  promise.utils.ts  tailwind.utils.ts
src/: main.rs
src/libs/: mod.rs  torrent_ws.rs  transmission.rs  ws_handler.rs
src/models/: args.rs  axum_state.rs  mod.rs  prowlarr_config.rs  rpc.rs
src/routes/: api_route.rs  mod.rs
(+21 files in other folders)
