[package]
name = "media-center-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ['ws'] }
clap = { version = "4.5.0", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ['full'] }
tower = "0.4.13"
tower-http = { version = "0.5.2",  features = ["full"] }
serde = {version ="1.0.196", features = ["derive"]}
serde_json = "1.0.113"
reqwest = { version = "0.12.2", features = ["socks", "json"] }
transmission-rpc = "0.5.0"
dotenv-flow = "0.16.2"
url-escape = "0.1.1"
resolve-path = "0.1.0"
quick-xml = { version = "0.37.5", features = ["serde", "serialize"] }
anyhow = "1.0.98"
chrono = "0.4.41"
walkdir = "2.5.0"
